@@ -53,6 +53,8 @@ plone_buildout_extra:
 
 plone_autorun_buildout: yes
 
+plone_always_run_buildout: no
+
 plone_buildout_cache_url: http://dist.plone.org/release/{{ plone_version }}/buildout-cache.tar.bz2
 
 plone_buildout_cache_file:
@@ -175,3 +177,4 @@ instance_config:
   plone_task_env_vars: "{{ plone_config.plone_task_env_vars|default(plone_task_env_vars) }}"
   webserver_virtualhosts: "{{ plone_config.webserver_virtualhosts|default(webserver_virtualhosts) }}"
   plone_extra_find_links: "{{ plone_config.plone_extra_find_links|default(plone_extra_find_links) }}"
+  plone_always_run_buildout: "{{ plone_config.plone_always_run_buildout|default(plone_always_run_buildout) }}"
