@@ -38,7 +38,6 @@ extensions =
     mr.developer
 
 auto-checkout = *
-git-clone-depth = 1
 {% endif %}
 
 effective-user = {{ instance_config.plone_daemon_user }}
