@@ -1,7 +1,7 @@
 ---
 
 - hosts: all
-  sudo: yes
+  become: yes
   gather_facts: yes
 
 
@@ -16,8 +16,10 @@
         plone_client_base_port: 5080
         plone_additional_eggs:
           - collective.recaptcha
+          - pas.plugins.authomatic
         plone_sources:
-          - "collective.recaptcha = git https://github.com/collective/collective.recaptcha.git"
+          - "collective.recaptcha = git https://github.com/collective/collective.recaptcha.git rev=tags/1.1.5"
+          - "pas.plugins.authomatic = git https://github.com/collective/pas.plugins.authomatic.git update=true depth=1"
 
       - plone_instance_name: p4
 
@@ -40,6 +42,7 @@
         plone_additional_versions:
           - "plone4.csrffixes = 1.0.9"
           - "cssselect = 0.9.1"
+          - "nothing.much = 0.9.1"
 
   roles:
 
